<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TopActivity">

    <include layout="@layout/tool_bar"/>

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_main_radio"
        android:layout_marginBottom="0dp"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/ll_main_radio"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/ll_main_radio"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp">

        <RadioGroup
            android:id="@+id/rg_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_main"
                style="@style/rb_style"
                android:checked="true"
                android:drawableTop="@drawable/selector_main_button"
                android:text="@string/rb_main"/>

            <RadioButton
                android:id="@+id/rb_message"
                style="@style/rb_style"
                android:drawableTop="@drawable/selector_message_button"
                android:text="@string/rb_message"/>

            <RadioButton
                android:id="@+id/rb_title"
                style="@style/rb_style"
                android:drawableTop="@drawable/selector_find_button"
                android:text="@string/rb_find"/>

            <RadioButton
                android:id="@+id/rb_my"
                style="@style/rb_style"
                android:drawableTop="@drawable/selector_mys_button"
                android:text="@string/rb_my"/>
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>